@@ -339,13 +339,19 @@ add_treeview(self,pos:tuple,fg='#1a1a1a',bg='#f3f3f3',onfg='#1a1a1a',onbg='#eaea
 
 绘制一个树状图。
 
-返回值：items, items_dict, box, uid
+返回值：items, items_dict, box, funcs, uid
 
 > items::所有元素id对应的文本id、背景id，以及可能的伸缩提示文本id的字典
 >
 > items_dict::所有含子级元素id对应下一级id的字典
 >
 > box::作为树状图父组件的BasicTinUI
+>
+> funcs
+>
+> > `funcs.close_all()`::折叠全部
+> >
+> > `funcs.open_all()`::展开全部
 
 ![](https://github.com/Smart-Space/TinUI/raw/main/image/TinUI树状图.gif)
 
