@@ -6,10 +6,16 @@
 ==========更新日志==========
 
 
-==========6.10==========
+==========6.11==========
 2026
 1. 新增navigation 导航边栏
 2. ui的滚动条适时出现
+3. panel允许设置背景色与圆角大小
+4. 样式表添加警告按钮warningbutton
+5. 优化button2图标对齐
+6. 修复ui删除时的问题
+7. 优化treeview元素布局
+8. treeview添加全部展开和全部关闭方法
 
 ==========6.9==========
 2025-12-2
